Fix word wrapping in title

--- a/frontend/src/style/app/image/_comments.scss
+++ b/frontend/src/style/app/image/_comments.scss
@@ -34,12 +34,16 @@
     strong {
       @include font(600);
       font-size: 1.4rem;
+      word-wrap: break-word;
+      word-break: break-word;
     }
 
     p {
       margin-top: 4px;
       font-size: 1.4rem;
       margin-bottom: 0;
+      word-wrap: break-word;
+      word-break: break-word;
       color: rgb(var(--color-text));
     }
   }
